# JWT_AUTH_REACT_FASTAPI

backend/: alembic.ini  pyproject.toml
backend/app/: config.py  main.py  schema.py
backend/app/controller/: authentication.py  users.py
backend/app/model/: __init__.py  mixins.py  person.py  role.py  user_role.py  users.py
backend/app/repository/: auth_repo.py  base_repo.py  role.py  users.py
backend/app/service/: auth_service.py  users.py
backend/migrations/: env.py
backend/migrations/versions/: b64e8ed2cdbb_initial_migration_for_db.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  Home.js  index.js
frontend/src/form/: Forgot.js  Login.js  Register.js
